--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--this is head tag-->
         <meta charset="uft-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FlipKart</title>
